# interviewed

./: .editorconfig  .gitignore  .tool-versions
extend/: .gitignore  README.md
extend/api/: app.js  common.js  mockSessionStore.js  package.json
extend/api/routes/: auth.js  cards.js  mockTxns.js  transactions.js
extend/client/: package.json
extend/client/src/: App.js
extend/client/src/components/: Dashboard.jsx  SignIn.jsx
hanover/: package.json  tsconfig.json  vite.config.ts
hanover/server/: package.json  tsconfig.json
hanover/server/src/: index.ts
hanover/src/: App.tsx
hanover/src/components/: SearchInterface.css  SearchInterface.tsx  SearchResults.module.css
meow/: .gitignore  Makefile  pyproject.toml
meow/api/: Makefile  README.md  banking.db  init_treasury.py  main.py  models.py  pyproject.toml  tb_client.py  types.py
pulley/frontend/: package.json
pulley/frontend/src/: App.css  App.tsx
pulley/frontend/src/components/: SearchInterface.tsx  SearchResults.module.css  SearchResults.tsx
pulley/simplexity20241206/: .env.example  .gitignore  Dockerfile  PROMPT.md  README.md  THOUGHTS.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  test_app.py
pulley/simplexity20241206/templates/: index.html
ramp/: excel.py  round1.md  snake_case.py  snake_case_parse_by_token.py
rilla/: question.md
workwhile/: interview.py  interview_problem.md  interview_task.md  pyproject.toml
workwhile/debug/: DEBUGGING_README.md  bootstrap_db.py  configuration.py  db.py  pyproject.toml  server.py  setup_environment.ps1  setup_environment.sh  workwhile.db
workwhile/feature/: README.md  index.py
