[tool.poetry]
name = "meow"
version = "0.1.0"
description = ""
authors = ["Tan Nguyen <45516852+nt7nguye@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tigerbeetle = "^0.16.35"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
