[tool.poetry]
name = "workwhile"
version = "0.1.0"
description = ""
authors = ["Tan Nguyen <nt7nguye@uwaterloo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
haversine = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
